--- a/app/src/main/res/layout/fragment_tree_detail.xml
+++ b/app/src/main/res/layout/fragment_tree_detail.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -81,4 +83,11 @@
 
 
     </ScrollView>
-</LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fullImageSlide"
+        android:visibility="gone"
+        android:background="@color/grey_trans"
+        />
+</RelativeLayout>
